# standupsync.ai

./: .env.example  .gitignore  CLAUDE.md  K8S_GUIDE.md  README.md  docker-compose.yml  requirements.txt  sev.sh
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 33ea74a9b86d_initial_migration.py  b2f4e8c1d9a3_model_constraints_and_indexes.py
backend/app/: celery_app.py  main.py
backend/app/api/v1/routes/: admin.py  auth.py  standup.py  summary.py  teams.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: models.py  session.py
backend/app/schemas/: standup.py  summary.py  team.py  user.py
backend/app/services/: ai_service.py  auth_service.py  email_service.py  standup_service.py
backend/app/tasks/: digest.py
backend/tests/: conftest.py  test_auth.py  test_main.py  test_standups.py
docs/: 01-architecture.md  02-local-setup.md  03-backend.md  04-api-reference.md  05-frontend.md  06-kubernetes.md  07-cicd.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: Button.jsx  Card.jsx  Input.jsx
k8s/: argocd-app.yaml  backend-deployment.yaml  backend-service.yaml  beat-deployment.yaml  configmap.yaml  frontend-deployment.yaml  frontend-nginx-configmap.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  secret.yaml  worker-deployment.yaml
