[project]
name = "standupsync-backend"
version = "0.1.0"
description = "Backend for StandupSync"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.0.0",
    "python-multipart",
    "pydantic[email]",
    "pydantic-settings",
    "alembic",
    "celery",
    "redis",
    "google-genai",
    "python-dotenv",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=1.3.0",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
